@@ -1,20 +1,8 @@
 package patient.controllers;
 
-import java.io.BufferedReader;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
-import java.net.ConnectException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.util.ResourceBundle;
-
 import com.google.gson.Gson;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXTextField;
-
 import javafx.application.Platform;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -23,8 +11,18 @@ import javafx.stage.Stage;
 import patient.communication.AccountObjectCommunication;
 import patient.models.APIRequest;
 import patient.models.APIResponse;
-import patient.params.PatientParams;
 import patient.utility.RegexValidator;
+
+import java.io.*;
+import java.net.ConnectException;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.ResourceBundle;
+
+import static patient.params.PatientParams.BASE_URL;
+import static patient.params.PatientParams.DNI_LETTERS;
 
 public class InsertIdController implements Initializable {
 
@@ -37,7 +35,7 @@ public class InsertIdController implements Initializable {
 	public void initialize(URL location, ResourceBundle resources) {
 		
 		RegexValidator validator = new RegexValidator();
-		validator.setRegexPattern("[0-9]{8}" + PatientParams.DNI_LETTERS + "{1}");
+		validator.setRegexPattern("[0-9]{8}" + DNI_LETTERS + "{1}");
 		
 		idField.setPromptText("Health insurance number");
 		validator.setMessage("Patient ID Number is not valid");
@@ -52,7 +50,7 @@ public class InsertIdController implements Initializable {
 		confirmButton.setOnAction((ActionEvent event) -> {
 			if(idField.validate()) {
 				confirmButton.setDisable(true);
-				updateId(idField.getText().toString());
+				updateId(idField.getText());
 			}
 		});
 	}
@@ -63,13 +61,13 @@ public class InsertIdController implements Initializable {
 			public void run() {
 				
 				try {
-					HttpURLConnection connection = (HttpURLConnection) new URL(PatientParams.BASE_URL + "/addPatientIdNumber").openConnection();
+					HttpURLConnection connection = (HttpURLConnection) new URL(BASE_URL + "/addPatientIdNumber").openConnection();
 					connection.setRequestMethod("POST");
 					
 					APIRequest requestAPI = new APIRequest();
 					if(!idValue.equals("")) {requestAPI.setPatientIdNumber(idValue);}
 					requestAPI.setPatientId(AccountObjectCommunication.getPatient().getPatientId());
-					String postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), "UTF-8");	
+					String postData = "APIRequest=" + URLEncoder.encode(new Gson().toJson(requestAPI), StandardCharsets.UTF_8);
 					
 					
 					connection.setDoOutput(true);
@@ -79,7 +77,7 @@ public class InsertIdController implements Initializable {
 					
 					BufferedReader inputReader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 					String inputLine;
-					StringBuffer response = new StringBuffer();
+					StringBuilder response = new StringBuilder();
 					while ((inputLine = inputReader.readLine()) != null) {
 						response.append(inputLine);
 					}
@@ -89,33 +87,24 @@ public class InsertIdController implements Initializable {
 					APIResponse responseAPI = gsonConverter.fromJson(response.toString(), APIResponse.class);
 					
 					if(responseAPI.isError()) {
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								confirmButton.setDisable(false);
-								idField.setText("");
-							}
+						Platform.runLater(() -> {
+							confirmButton.setDisable(false);
+							idField.setText("");
 						});
 						
 					} else {
 					
 						AccountObjectCommunication.getPatient().setPatientIdNumber(idValue);
 						
-						Platform.runLater(new Runnable() {
-							@Override
-							public void run() {
-								Stage stage = (Stage) confirmButton.getScene().getWindow();
-								stage.close();
-							}
+						Platform.runLater(() -> {
+							Stage stage = (Stage) confirmButton.getScene().getWindow();
+							stage.close();
 						});
 					}
 					
-				} catch (ConnectException | FileNotFoundException conncetionError) {
-					Platform.runLater(new Runnable() {
-						@Override
-						public void run() {
-							// TODO - Show error message
-						}
+				} catch (ConnectException | FileNotFoundException connectionError) {
+					Platform.runLater(() -> {
+						// TODO - Show error message
 					});
 				} catch (IOException error) {
 					error.printStackTrace();
